# SemCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: SemCpp.hpp
src/: SemCpp.cpp
test/: test.hpp  test1.cpp  test2.cpp
